--- a/website/css/style.css
+++ b/website/css/style.css
@@ -111,7 +111,6 @@ header {
 #scroll-bar-tab {
   position: absolute;
   float: left;
-  padding-top: 20px;
   width: 24%;
   min-width: 24%;
   height: 100%;
@@ -121,7 +120,7 @@ header {
   border-right: solid rgba(0, 0, 0, 0.3) 1px;
   padding: 20px;
   min-width: 100%;
-  height : 95%;
+  height : 100%;
   overflow: auto;
 }
 
@@ -137,18 +136,50 @@ header {
   width: 98%;
 }
 
-.sb-dir {
+#index-pos {
+  margin-left: 0px;
+}
+
+#index-pos li {
+  padding: 4px;
+}
+
+.arrow {
+  display: inline-block;
+  margin-right: 5px;
+  background-color: #19E3B1;
   cursor: pointer;
+  width: 15px;
+  height: 15px;
+  text-align: center;
+  color: white;
+  font-size: 0.9em;
+  font-weight: bold;
+}
+
+.arrow + span {
+  cursor: pointer;
+}
+
+.arrow + span:hover {
+  color: rgba(0, 0, 0, 1);
+}
+
+.sb-dir {
   color: rgba(0, 0, 0, 0.7);
+  vertical-align: middle;
+  list-style-type: none;
 }
 
 .sb-file {
+  list-style-type: none;
   cursor: pointer;
   color: rgba(0, 0, 0, 0.7);
 }
 
 .sb-file:hover {
   text-decoration: underline;
+  color: rgba(0, 0, 0, 1);
 }
 
 /* Scrollbar Layers */
@@ -165,9 +196,16 @@ header {
 
 #content-container {
   position: relative;
-  top: -20px;
   margin-left: auto;
-  height: 100%;
+
+  /*
+   * NOTE(jenchieh): 140px is get from all the height from different
+   * component. The header is 100px and the `scroll-bar-container'
+   * have padding of 20px, including top and bottom so is 40px.
+   *
+   * Hence, 100px + 40px = 140px.
+   */
+  height: calc(100% - 140px);
 }
 
 #content-header {
@@ -175,14 +213,14 @@ header {
 }
 
 #content-wrapper {
-  margin-left: 30%;
   margin-right: 2%;
+  margin-left: 30%;
 }
 
 #content-body {
   width: 100%;
   font-size: 14px;
-  padding-top: 20px;
+  padding-top: 1px;
 }
 
 #content-hr {
