--- a/website/css/content.css
+++ b/website/css/content.css
@@ -10,6 +10,8 @@
 
 /* All the content CSS store here. */
 
+/********************* Code Block *****************************/
+
 .code-inline {
   display: inline;
   background-color: #EFF0F1;
@@ -20,4 +22,38 @@
   display: block;
   background-color: #EFF0F1;
   font-family: 'Ubuntu Mono', monospace;
+}
+
+/********************* Table *****************************/
+
+table {
+  width: 100%;
+  border-spacing: 0px;
+  border-collapse: collapse;
+}
+
+tr {
+  height: 30px;
+}
+
+tr:hover {
+  outline: solid #00CCCC 1px;
+}
+
+td {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+tr:nth-child(odd) {
+  background-color: #F8F8F8;
+}
+
+tr:nth-child(even) {
+  background-color: white;
+}
+
+td:nth-child(2) {
+  /* Make table grow/algin from left. */
+  width: 100%;
 }
