--- a/website/css/style.css
+++ b/website/css/style.css
@@ -302,6 +302,7 @@ header {
 
 #content-footer {
   display: inline-block;
+  margin-bottom: 100px;
   vertical-align: middle;
   font-size: 13px;
 }
