Update content color.

--- a/website/css/content.css
+++ b/website/css/content.css
@@ -61,6 +61,12 @@ blockquote {
 
 /********************* Table *****************************/
 
+th {
+  background-color: #B0F3FF;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 table {
   width: 100%;
   border-spacing: 0px;
