Update css th color.

--- a/website/css/content.css
+++ b/website/css/content.css
@@ -62,7 +62,7 @@ blockquote {
 /********************* Table *****************************/
 
 th {
-  background-color: #B0F3FF;
+  background-color: #A2F2DE;
   padding-left: 15px;
   padding-right: 15px;
 }
